changed colors, added background picture, centering and aligning

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <label for="checkbox">Show Password</label>
             </div>
             <button type="button" class="btn btn-outline-info mx-auto">Login</button> <!--Bootstrap button-->
+            <a href="#">Forgot username or password?</a>
         </form>
     </div>
   <script src="index.js"></script>
