--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,20 +10,20 @@
 </head>    
 
 <body>
-    <div class="container">
-        <form class="login-form">
-            <h1>Login</h1>
-            <label for="username">Username</label>
-              <input type="text">
-            <label for="password">Password</label>
-              <input type="password" id="password-input">
-            <div class="checkbox">
-                <input type="checkbox" onClick="showPassword()">
-                <label for="checkbox">Show Password</label>
-            </div>
-            <button type="button" class="btn btn-outline-info mx-auto">Login</button> <!--Bootstrap button-->
-            <a href="#">Forgot username or password?</a>
-        </form>
+    <div class="container-fluid">
+          <form class="login-form">
+                <h1>Login</h1>
+                <label for="username">Username</label>
+                  <input type="text">
+                <label for="password">Password</label>
+                  <input type="password" id="password-input">
+                <div class="checkbox">
+                    <input type="checkbox" onClick="showPassword()">
+                    <label for="checkbox">Show Password</label>
+                </div>
+                <button type="button" class="btn btn-outline-info mx-auto">Login</button> <!--Bootstrap button-->
+                <a href="#">Forgot username or password?</a>
+          </form>
     </div>
   <script src="index.js"></script>
 </body>
